# actixweb_workspace

./: .env  .gitignore  Cargo.toml  Readme.md  cert.pem  credentials.json  dump.rdb  key.pem
authentication/: Cargo.toml
authentication/src/: claims.rs  lib.rs
migrations/: 20230208133542_authentication.down.sql  20230208133542_authentication.up.sql  init.sql
pyenv/: pyvenv.cfg
pyenv/Scripts/: activate  activate.bat
webapp/: Cargo.toml
webapp/src/: config.rs  lib.rs  main.rs
webapp/src/services/: google_services.rs  mod.rs
webapp/src/services/apis/: mod.rs
webapp/src/services/apis/game_admin/: mod.rs  request.rs  response.rs
webapp/src/services/models/: request.rs  response.rs
