[package]
name = "authentication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web ="^4"
serde ={version="^1", features = ["derive"]}
log ="^0.4.17"
env_logger ="^0.10"
dotenvy = "^0.15"
config ="^0.13.3"
actix-web-httpauth = "^0.8.0"
hmac = "^0.12.1"
sha2 = "^0.10.6"
argonautica = { version = "^0.2.0", features = ["serde", "simd"] }
jsonwebtoken = "^8"
actix-web-grants = "^3.0.1"
chrono = {version="^0.4.23", features=["serde"]}
sqlx = { version = "^0.6", features = [ "runtime-actix-native-tls" , "postgres" ] }