[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version="^4", features=["openssl"]}
serde ={version="^1", features = ["derive"]}
serde_json = "^1.0"
log ="^0.4.17"
env_logger ="^0.10"
dotenvy = "^0.15"
config ="^0.13.3"
utoipa = { version = "2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "2", features = ["actix-web"] }
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "postgres", "macros" ] }
clap = {version="^4.1.1", features=["derive"]}
actix-web-httpauth = "^0.8.0"
actix-web-grants = "^3.0.1"
jsonwebtoken = {version="^8", features = ["use_pem"]}
actix-session = {version="^0.7.2", features= ["cookie-session"]}
actix-cors = "^0.6.4"
chrono = {version="^0.4.23", features=["serde"]}
reqwest = "^0.11.14"
openssl = { version = "^0.10" }

authentication={path="../authentication"}
